--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "mongodb": "^6.3.0",
     "mongoose": "^8.0.3",
     "next": "^13.5.6",
+    "nodemailer": "^6.9.7",
     "postcss": "8.4.29",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
+    "react-toastify": "^9.1.3",
     "tailwindcss": "3.3.3"
   }
 }
