--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
     "formik": "^2.4.5",
+    "gsap": "^3.12.5",
     "mongodb": "^6.3.0",
     "mongoose": "^8.0.3",
     "next": "^13.5.6",
@@ -22,6 +23,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.12.0",
     "react-toastify": "^9.1.3",
+    "react-use": "^17.5.0",
     "tailwindcss": "3.3.3"
   }
 }
